--- a/Task-1- Portfolio/index.html
+++ b/Task-1- Portfolio/index.html
@@ -28,7 +28,7 @@
   </nav>
 </header>
 
-<!-- HOME SECTION ONLY -->
+<!-- Home section -->
 
 <section id="home" class="home">
   <div class="home-text">
@@ -60,17 +60,17 @@
   </div>
 </section>
 
-<!--ABOUT SECTION-->
+<!--About section-->
 
 <section id="about" class="about dark-bg">
 <div class="about-container">
 
-    <!-- LEFT PHOTO -->
+    <!-- Left photo-->
     <div class="about-left">
       <img src="profile.jpeg" alt="Safiya portrait" />
     </div>
 
-    <!-- RIGHT CONTENT -->
+    <!-- Right content -->
 
     <div class="about-right">
 
@@ -81,7 +81,7 @@
     </div>
     </div>
 
-      <!-- EDUCATION -->
+      <!-- Education -->
     
 </section>
 <section class="education-section">
@@ -92,7 +92,7 @@
   </div>
 <div class="edu-list">
 
-    <!-- CARD 1 -->
+    <!-- Card 1 -->
      <div class="edu-card">
       <div class="edu-top">
         <i class="fa-solid fa-graduation-cap"></i>
@@ -106,7 +106,7 @@
     <P>Focused on Full-Stack Web Development,Data Structure & Algorithms.Build responsive web applications and worked on real-world academic projects.</P>
     </div>
 
-    <!-- CARD 2 -->
+    <!-- Card 2 -->
 
     <div class="edu-card">
       <div class="edu-top">
@@ -121,7 +121,7 @@
       </p>
     </div>
 
-          <!-- CARD 3 -->
+          <!-- Card 3 -->
 
     <div class="edu-card">
       <div class="edu-top">
@@ -139,7 +139,7 @@
  </div>
 </section>
 
-<!------ SKILL ----->
+<!------ Skill ----->
 <section id="skills" class="skills-section">
     <div class="container">
         <h2 class="title">Skills</h2>
@@ -206,7 +206,7 @@
     </div>
 </section>
 
-<!------ PROJECT ----->
+<!------ Project ----->
 
 <section id="projects" class="projects-section">
     <div class="container">
@@ -280,7 +280,7 @@
     </div>
 </section>
 
-<!------  CONTACT  ----->
+<!------  Contact  ----->
 <section id="contact" class="contact-section">
         <div class="container-custom">
             <div class="contact-header">
